<resources>
    <string name="app_name">TreeCare</string>
    <string name="change_daily_goal">Change daily goal</string>
    <string name="unity_shared_preferences">dal.mitacsgri.treecare.v2.playerprefs</string>
    <string name="daily_step_count">daily_step_count</string>
    <string name="last_day_step_count">last_day_step_count</string>
    <string name="daily_steps_goal">daily_goal</string>
    <string name="login_done">login_done</string>
    <string name="last_opened_day">last_opened_day</string>
    <string name="daily_goal_checked">daily_goal_checked</string>
    <string name="goal_completion_streak_checked">goal_completion_streak_checked</string>
    <string name="starter_mode_instructions_displayed">starter_mode_instructions_displayed</string>
    <string name="challenger_mode_instructions_displayed">challenger_mode_instructions_displayed</string>
    <string name="tournament_mode_instructions_displayed">tournament_mode_instructions_displayed</string>
    <string name="is_first_run">is_first_run</string>
    <string name="leaf_count_before_today">leaf_count_before_today</string>
    <string name="leaves_gained_today">leaves_gained_today</string>
    <string name="goal_achieved_streak">goal_achieved_streak</string>
    <string name="current_day">current_day</string>
    <string name="total_fruits_on_tree">total_fruits_on_tree</string>
    <string name="first_login_time_ms">first_login_time_ms</string>
    <string name="last_login_time_ms">last_login_time_ms</string>
    <string name="last_logout_time_ms">last_logout_time_ms</string>
    <string name="last_leaf_count">last_leaf_count</string>
    <string name="current_leaf_count">current_leaf_count</string>
    <string name="last_fruit_count">last_fruit_count</string>
    <string name="current_fruit_count">current_fruit_count</string>
    <string name="current_day_of_week">current_day_of_week</string>
    <string name="daily_goal_streak">daily_goal_streak</string>
    <string name="daily_goal_achieved_count">daily_goal_achieved_count</string>
    <string name="daily_goal_streak_string">daily_goal_streak_string</string>
    <string name="user">user</string>
    <string name="game_mode">game_mode</string>
    <string name="challenge_type">challenge_type</string>
    <string name="challenge_leaf_count">challenge_leaf_count</string>
    <string name="challenge_last_leaf_count">challenge_last_leaf_count</string>
    <string name="challenge_fruit_count">challenge_fruit_count</string>
    <string name="challenge_goal">challenge_goal</string>
    <string name="challenge_streak">challenge_streak</string>
    <string name="challenge_name">challenge_name</string>
    <string name="challenge_total_steps_count">challenge_total_steps_count</string>
    <string name="challenge_is_active">challenge_is_active</string>
    <string name="leaderboard_position">leaderboard_position</string>
    <string name="daily_goal_map_fixed">daily_goal_map_fixed</string>
    <string name="tournament_type">tournament_type</string>
    <string name="tournament_goal">tournament_goal</string>
    <string name="tournament_leaf_count">tournament_leaf_count</string>
    <string name="tournament_last_leaf_count">tournament_last_leaf_count</string>
    <string name="tournament_fruit_count">tournament_fruit_count</string>
    <string name="tournament_streak">tournament_streak</string>
    <string name="tournament_name">tournament_name</string>
    <string name="tournament_is_active">tournament_is_active</string>
    <string name="tournament_total_steps_count">tournament_total_steps_count</string>
    <string name="login_screen_quote">Your tree flourishes as you perform physical activity daily!</string>
    <string name="login_text">Please login with your Google account to proceed</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="instructions">Instructions</string>
    <string name="select_a_mode">Select a mode</string>
    <string name="challenger">Challenger</string>
    <string name="starter">Starter</string>
    <string name="tournament">Tournament</string>
    <string name="starter_mode">Starter Mode</string>
    <string name="starter_mode_instructions">This is a single player mode. Here are the rules of this mode:
        \n\n1. Your daily goal is initially set as 5,000 steps which can be increased by you.
        \n\n2. For every 1,000 steps taken in a day, you will gain a green leaf.
        \n\n3. When you will fail to meet your daily goal, you will lose the number of leaves that corresponds to the remaining steps required to meet your goal.
        \n\n4. If you will meet your daily goal consistently for a week, you will gain a fruit on your tree.
        \n\n5. But, if you will fail to fulfill your daily goals for a week, you will lose a fruit (if any).</string>
    <string name="challenger_mode_instructions">This is an individual-based competitive mode with following rules:
        \n\n1. You compete with other player(s). The rules in the Starter Mode also apply to every player in this mode.
        \n\n2. You can see various active challenges (created by other players) and can choose to join any of them to compete.
        \n\n3. Alternatively, you can create your own challenge by inviting other players to compete with you.
        \n\n4. To publicly recognize players’ efforts, there is a leaderboard that ranks top 10 players in descending order of the number of steps they took during challenge.
        \n\n5. Every player participating in a challenge can visualize the state of the other players’ trees.
        \n\n6. Every challenge has a timeline which is set by the organizer.</string>
    <string name="teams_instruction">Teams Instructions</string>
    <string name="continueToGame">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_challenges">Your challenges</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="join">Join</string>
    <string name="challenge_description">Description</string>
    <string name="challenge_option_daily_goal_based">Daily Goal Based</string>
    <string name="challenge_option_aggregate_based">Aggregate based</string>
    <string name="create">Create</string>
    <string name="leaderboard_challenge_name">Challenge name</string>
    <string name="challenge_finished">Challenge finished</string>
    <string name="tournament_mode">Tournament Mode</string>
    <string name="tournaments">Tournaments</string>
    <string name="team">Team</string>
    <string name="teams">Teams</string>
    <string name="send_join_request">Send Join Request</string>
    <string name="team_name_hint">Team name</string>
    <string name="create_team_info">\u2022 You will be the captain of the new team created by you. However you can change the captain after creating the team. \n\n\u2022 You can invite other members to be the part of your team after creating the team</string>
    <string name="invite_member">Invite Member</string>
    <string name="join_request_sent">Join request sent</string>
    <string name="join_request_exceed">You\'re already part of a team</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="join_request_cancelled">Join request cancelled</string>
    <string name="member_requests">Member requests</string>
    <string name="invite">Invite</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="challenge_awards">Challenger Awards</string>
    <string name="challenger_mode">Challenger mode</string>
    <string name="go_to_challenger_mode">Go to Challenger Mode</string>
    <string name="your_streak">Your Streak</string>
    <string name="progress_report">Progress Report</string>
    <string name="settings">Settings</string>
    <string name="change_volume">Change volume</string>
    <string name="volume">Volume</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="save">Save</string>
    <string name="daily_goal_changes_are_applicable_from_the_next_day">Daily goal changes are applicable from the next day</string>
    <string name="unsaved_changes_warning">You have unsaved changes</string>
    <string name="warning">Warning</string>
    <string name="log_out">Logout</string>
    <string name="logout_message">Do you want to log out or switch accounts?</string>
    <string name="logout_title">Logout/Switch account</string>
    <string name="challenges">Challenges</string>
    <string name="goal_completed_notification">You have achieved your daily goal today. Congratulations!</string>
    <string name="daily_goal_remaining_notification">You are %d steps away from achieving your daily goal</string>
    <string name="daily_goal_notification_title1">Make every step count</string>
    <string name="daily_goal_notification_title7">It always seems impossible until its done</string>
    <string name="daily_goal_notification_title9">Achieve your steps goal for today!</string>
    <string name="profile_image_start_transition">profile_image_start_transition</string>
    <string name="profile_image_end_transition">profile_image_end_transition</string>
    <string name="create_challenge">Create challenge</string>
    <string name="back">Back</string>
    <string name="enter_a_new_name">Enter a new name</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="invite_players">Invite Team Members</string>
    <string name="tournament_description">Tournament description</string>
    <string name="add_teams">Add Teams</string>
    <string name="InvReq">Invites/Requests</string>
    <string name="team_name">Team Name</string>
    <string name="invite_players1">Invite</string>
    <string name="view_team">View Team</string>
    <string name="enrollteams">Enroll Teams</string>
    <string name="enroll">Enroll</string>
    <string name="user_invited_successfully">User was invited Successfully</string>
    <string name="user_does_not_exist">PlayerId does not exist</string>
    <string name="leaderboard_tournament_name">TOURNAMENT NAME</string>
    <string name="tournament_ended">Tournament Ended</string>
    <string name="tournament_awards">Tournament Awards</string>
    <string name="tournament_leaderboard_position">tournament_leaderboard_position</string>
    <string name="tournament_last_total_steps_count">tournament_last_total_steps_count</string>
    <string name="Search">Search</string>
    <string name="transfer_captaincy">Transfer Captaincy</string>
    <string name="assign">Assign</string>
    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>
    <string name="activity_on_foot">On Foot</string>
    <string name="activity_running">Running</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">walking</string>
    <string name="activity_unknown">Unknown</string>
    <string name="Player">Player</string>
    <string name="New_Challenge">New Challenge</string>
    <string name="sendentary_notification_title2">Sedentary Alert</string>
    <string name="sendentary_notification_title3">Have you been sitting for a long time?</string>
    <string name="sendentary_notification_body2">You have been sedentary for the past 30 mins. You should take at least 5 minutes walk to be refreshed</string>
    <string name="sendentary_notification_body3">Move around every now and then so that you can feel refreshed</string>
    <string name="sendentary_notification_body4">Mix up your work with short walks. Avoid sitting at the same place for a long time</string>
    <string name="sendentary_notification_body5">Feeling lazy? Move around a bit, grab a glass of water and you will feel refreshed</string>
    <string name="vehicle_notification_title1">It looks like you\'re in a vehicle!</string>
</resources>