<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tree_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<include
            layout="@layout/layout_background_image"
            android:id="@+id/backgroundLayout"/>-->

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:fontFamily="@font/pinewood"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_48sdp"
            app:layout_constraintBottom_toTopOf="@id/starterModeButtonHolder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/starterModeButtonHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDarkTransparent"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp"
            app:layout_constraintBottom_toTopOf="@+id/challengerModeButtonHolder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent=".76"
            app:strokeColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_run" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/starterModeButton"
                    style="@style/ModeSelectionButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starter" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/challengerModeButtonHolder"
            style="@style/ModeSelectionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/colorPrimaryDarkTransparent"
            android:theme="@style/challenger_mode_theme"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp"
            app:layout_constraintBottom_toTopOf="@+id/tournamentModeButtonHolder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/starterModeButtonHolder"
            app:layout_constraintWidth_percent=".76"
            app:strokeColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_challenger" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/challengerModeButton"
                    style="@style/ModeSelectionButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/challenger_mode_primary_color"
                    android:text="@string/challenger" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tournamentModeButtonHolder"
            style="@style/ModeSelectionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/colorPrimaryDarkTransparent"
            android:theme="@style/tournament_mode_theme"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/challengerModeButtonHolder"
            app:layout_constraintWidth_percent=".76"
            app:strokeColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:color="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_tournament" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tournamentModeButton"
                    style="@style/ModeSelectionButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/tournament_mode_primary_color"
                    android:text="@string/tournament" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <!--    <com.google.android.material.button.MaterialButton-->
        <!--        android:layout_width="0dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/tournament"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        android:backgroundTint="@color/tournament_mode_primary_color"-->
        <!--        app:layout_constraintHorizontal_bias="0.5"-->
        <!--        android:id="@+id/tournamentModeButton"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/challengerModeButtonHolder"-->
        <!--        app:layout_constraintBottom_toBottomOf="@+id/backgroundLayout"-->
        <!--        app:layout_constraintWidth_percent=".76"-->
        <!--        style="@style/ModeSelectionButtonStyle"/>-->

        <ImageButton
            android:id="@+id/buttonProfile"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/profile_button_background"
            android:elevation="@dimen/_2sdp"
            android:padding="@dimen/_2sdp"
            android:scaleType="centerInside"
            android:transitionName="@string/profile_image_start_transition"
            app:layout_constraintBottom_toTopOf="@+id/heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_profile_empty" />
        <!--<a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>